added update thing

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- css file link  -->
+    
     <link rel="stylesheet" href="styles/style.css" />
 
-    <!-- tailwind css and daisyUI cdn  -->
+    <!-- tailwind daisy -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@5"
       rel="stylesheet"
